--- a/manifest.json
+++ b/manifest.json
@@ -6,25 +6,16 @@
   "id": "/",
   "scope": "/",
   "display": "standalone",
-  "display_override": [
-    "window-controls-overlay",
-    "standalone"
-  ],
+  "display_override": ["window-controls-overlay", "standalone"],
   "launch_handler": {
-    "client_mode": [
-      "navigate-existing",
-      "auto"
-    ]
+    "client_mode": ["navigate-existing", "auto"]
   },
   "orientation": "portrait",
   "lang": "en-US",
   "dir": "ltr",
   "background_color": "#ffffff",
   "theme_color": "#615fff",
-  "categories": [
-    "lifestyle",
-    "photo"
-  ],
+  "categories": ["lifestyle", "photo"],
   "shortcuts": [
     {
       "name": "Explore Wallpapers",
